styles.css
/* body{
    background-color: #FA9EBC;
    color: #F8F3EA;
}
button{
    background-color: #570228;
    color: #FFD8D1;
    border: none;
    padding: 10px 20px;
    border-radius: 50px;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;
} */

/* .pfp{
    display: flex;
    justify-content: center;
} */
 

